Overlapping avoided

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -17,7 +17,7 @@
 }
 
 @mixin imageScale {
-  transform: scale(1.1);
+  transform: scale(105%);
 }
 
 @mixin scaleTransition {
